# modifier

./: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/: Cargo.toml  tauri.conf.json
app/src/: lock.rs  main.rs  sys_api.rs  win_api.rs
ui/window/: mod.tsx  side-panel.tsx
ui/window/center-panel/: menu-panel.tsx  mod.tsx  process-select-panel.tsx  title-panel.tsx
